// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button shadow test for second text 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "center",
      "backgroundColor": "tomato",
      "borderRadius": 10,
      "height": 45,
      "justifyContent": "center",
      "opacity": 1,
      "width": "90%",
    }
  }
  testID="ForTestCustomButtonID"
>
  <Text
    style={
      {
        "color": "white",
      }
    }
  >
    Shadow test texti
  </Text>
  <Text>
    İkinci text
  </Text>
</View>
`;

exports[`button snapshot test for text ve click action 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "center",
      "backgroundColor": "tomato",
      "borderRadius": 10,
      "height": 45,
      "justifyContent": "center",
      "opacity": 1,
      "width": "90%",
    }
  }
  testID="ForTestCustomButtonID"
>
  <Text
    style={
      {
        "color": "white",
      }
    }
  >
    Shadow test texti
  </Text>
</View>
`;
